# RAG_Application

./: README.md  deploy.sh
Backend/: OldRequiremments.txt  analyse.docm  modeltext.docx  news links.txt  pyproject.toml  requireements.txt  requiremments.txt  server.py  vercel.json
Backend/src/: alldocuments.py  detailed_joe_biden_articles.csv  newsapi.py  openai_utils.py  qdrant.py  rag.py  server.py  side.text  test.py  totalsources.py  visuals.py
Backend/src/repository/: calls.py
Backend/src/routers/: callsRouter.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/components/: CombinedConversattion.jsx  ConfirmModal .jsx  ConfirmURLs.jsx  Expander.jsx  ImageDisplay.jsx  NewsSources .jsx  QuestionForm.jsx
Frontend/src/layouts/: LandingPageLayout.jsx
Frontend/src/pages/: CombinedConversationPage.jsx  Conversation.jsx  Home.jsx  NewsSourcesPage.jsx
Frontend/src/routes/: Routes.jsx
