[tool.poetry]
name = "rag"
version = "0.1.0"
description = "with open ai"
authors = ["JoshMusira <joshuamusira01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
qdrant-client = "^1.9.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
