[tool.poetry]
name = "rag"
version = "0.1.0"
description = "with open ai"
authors = ["JoshMusira <joshuamusira01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
qdrant-client = "^1.9.2"
python-decouple = "^3.8"
openai = "^1.35.3"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-qdrant = "^0.1.1"
beautifulsoup4 = "^4.12.3"
sentence-transformers = "^3.0.1"
decouple = "^0.0.7"
wordcloud = "^1.9.3"
matplotlib = "^3.9.0"
nltk = "^3.8.1"
spacy = "^3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
